--- a/style.css
+++ b/style.css
@@ -320,11 +320,11 @@ hr {
 }
 
 .largepictext {
-  color: gba(87,87,87,1);
+  color: rgba(87,87,87,1);
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
-  font-size: 15px;
+  font-size: 16px;
   text-decoration: none;
   text-transform: none;
   line-height: 1.8em;
@@ -335,7 +335,7 @@ hr {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
   font-style: normal;
-  font-size: 15px;
+  font-size: 14px;
   text-decoration: none;
   text-transform: none;
   line-height: 1.8em;
